<resources>
    <string name="app_name">E-wardrobe</string>
    <string name="action_settings">Settings</string>
    <string name="get_text">Get</string>
    <string name="return_text">Return</string>
    <string name="hint_get_text">Hint: To receive a number, press the button.</string>
    <string name="closet_close_title">The wardrobe will be closed soon!</string>
    <string name="closet_close_text">Please dont forget to pick up your jacket.</string>
    <string name="disable_notification">disable notifications</string>
    <string name="enable_notification">enable notifications</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="login_hint_text">login</string>
    <string name="password_hint_text">password</string>
    <string name="join_us_text">Join us!</string>
    <string name="create_an_account_text">Create an account</string>
    <string name="incorrect_login_text">Login or password is incorrect</string>
    <string name="user_exists_text">User already exists</string>
    <string name="remember_me_text">Remember me</string>
</resources>
