<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText
        android:inputType="text"
        android:hint="@string/login_hint_text"
        android:id="@+id/login_edit_text"
        android:layout_width="150dp"
        android:layout_height="40dp"/>
    <EditText
        android:inputType="textPassword"
        android:hint="@string/password_hint_text"
        android:id="@+id/password_edit_text"
        android:layout_width="150dp"
        android:layout_height="40dp"/>
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button_text"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_text"/>
</LinearLayout>